proxy/deployment/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: lab-app-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: lab-app-proxy
              servicePort: 3001
